BiedronkaApp/force-app/main/default/objects/Price_Observation__c/Price_Observation__c.object-meta.xml
<CustomObject>
    <label>Price Observation</label>
    <pluralLabel>Price Observations</pluralLabel>
    <nameField>
        <label>Price Observation Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>