BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>The total discount value applied to this line.</description>
</CustomField>