BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Calculated percentage of the discount relative to the regular price.</description>
</CustomField>