BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Final_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Line_Price__c</fullName>
    <label>Final Line Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>The total price for this line item (after discounts).</description>
</CustomField>