BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Is_Promo__c.field-meta.xml
<CustomField>
    <fullName>Is_Promo__c</fullName>
    <label>Is Promo</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>