BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Observation_Date__c.field-meta.xml
<CustomField>
    <fullName>Observation_Date__c</fullName>
    <label>Observation Date</label>
    <type>DateTime</type>
</CustomField>