BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Price Observations</relationshipLabel>
    <relationshipName>Product_Price_Observations</relationshipName>
</CustomField>