BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Regular_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Regular_Unit_Price__c</fullName>
    <label>Regular Unit Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>The base price of a single unit before any discounts.</description>
</CustomField>