BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Shopping_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Transaction__c</fullName>
    <label>Shopping Transaction</label>
    <type>MasterDetail</type>
    <referenceTo>Shopping_Transaction__c</referenceTo>
    <relationshipLabel>Price Observations</relationshipLabel>
    <relationshipName>Price_Observations</relationshipName>
</CustomField>