BiedronkaApp/force-app/main/default/objects/Price_Observation__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <label>Store Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>